nickel-lang-lib/tests/integration/fail/unexpected_token/dollar.ncl
# test.type = 'error'
#
# [test.metadata]
# error = 'ParseError'
"Nickel"$